--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/* .css-1y4p8pa {
-    max-width: 63rem;
-} */
-
-.st-emotion-cache-1y4p8pa {
+[data-testid="block-container"] {
     max-width: 63rem;
 }
